test/fixtures/typecheck/fail/UnknownTypeclassInFunctionConstraint.lam
module UnknownTypeclassInFunctionConstraint

type D = D

default : Foo a => a -> D
default _ = D
